# cmake_with_doc_template

./: CMakeLists.txt
.github/: copilot-instructions.md
app/: CMakeLists.txt
app/common/app/app_boot_status/: app_boot_status.c  app_boot_status.h
app/common/app/app_fsm/: app_fsm.c  app_fsm.h
app/common/app/app_task_sequencer/: app_task_sequencer.c  app_task_sequencer.h
app/include/: MyModule.h
app/include/MyModule/: MyModule.h  MyModule.srs.rst
app/include/utils/Fsm/: Fsm.h  Fsm.sdd.rst  Fsm.srs.rst
app/src/frame_receiver/: frame_receiver.c  frame_receiver.h  frame_receiver.sdd.rst  frame_receiver.srs.rst  frame_receiver_internal.h
app/tests/ut/: CMakeLists.txt  ut-frame_receiver.c  ut_core_utils_fsm.cpp
app/tests/ut/app/: ut-app_boot_status.c  ut-app_fsm_master.c  ut-app_task_sequencer.c
cmake/: FindSphinx.cmake  GTestHelpers.cmake  MSVCCodeCoverage.cmake
copilot prompts/: generate_design_traceability-section.txt  srs_conversion_from_md_to_rst.txt  v&v_tests_versus_requirements.txt
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in  dnfw.Doxyfile
doc/sphinx/: conf.py.in
doc/sphinx/_static/css/: rtd_custom.css  simplepdf_custom.css
doc/src/: include.lnk  index.rst
doc/src/sdd/: sdd.rst  sdd.swc.rst
doc/src/sdd/common_cores/app/: app_boot_status.sdd.rst  app_fsm_master.sdd.rst  app_task_sequencer.sdd.rst
doc/src/sdd/common_cores/app/app_boot_status/: app_boot_status.sdd.rst
doc/src/srs/: srs.annexes.rst  srs.applicable_documents.rst  srs.changelog.rst  srs.ears.rst  srs.rst  srs.static_architecture.rst  srs.swc.rst  srs.terms_acronyms_abbreviations.md
doc/src/srs/com_app/: srs.com_app.rst  srs.com_core_swc.rst
doc/src/srs/common_cores/: srs.common_cores.rst
doc/src/srs/common_cores/app/: app.srs.rst
doc/src/srs/common_cores/app/app_fsm/: app_fsm.srs.rst
doc/src/sss/: sss.01_overview.rst  sss.02_system_architecture.rst  sss.03_software_requirements.rst  sss.A1_traceability_matrix.rst  sss.rst
doc/src/suitp/: suitp.rst  suitp.sw_integration_tests.rst  suitp.unittests.rst  suitp.validation_approach.rst
doc/src/swc/: template.sdd
tools/: README.md  check_test_requirements_coherence.py
